addition of the the create business feature in the profile.html

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -37,7 +37,11 @@
             Create Hood
           </a>
   </div> {% endcomment %}
+  <a href="{%url 'create_business'  %}" style="color:black;font-size: 0.7em;" class="btn btn-warning btn-sm">
+    Create Business
+  </a>
 </div>
+
 
 
 {% endblock %}
