--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,20 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <a class="navbar-brand neig text-center" href="{% url 'index' %}">Neighbourhood </a>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <a style="font-style:italics;"class="navbar-brand neig text-center " href="{% url 'index' %}">Neighbourhoods </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'hood' %}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link " href="{% url 'hood' %}">Hoods <span class="sr-only">(current)</span></a>
         </li>
         {% if user.is_authenticated %}
         <li class="nav-item active">
-          <a class="nav-link" href="/admin">Admin</a>
+          <a class="nav-link " href="/admin">Admin</a>
         </li>
         {%else%}
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'hoods' %}">Neighbourhoods </a>
+          <a class="nav-link " href="{% url 'hood' %}">Neighbourhoods </a>
         </li>
         {%endif%}
        
@@ -25,36 +26,33 @@
         {%endif%}
         
       </ul>
-      <ul class="nav navbar-nav navbar-right ml-auto mr-5"> 
-        <div class="forms">
-            <form class="me-auto search-form " target="_self" action="{% url 'search_business' %}">
-                <div class="input-group ">
-
-                    <input type="text" class="form-control" placeholder="Search Business by name"
-                        name="search_term">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="fa fa-search" aria-hidden="true"
-                                style="color: white;"></i></button>
-                    </div>
-                </div>
-            </form>
-
-        </div>
-
-        <li class="nav-item dropdown mr-2">
-            <a class="nav-link text-white" href="/profile" style=" color: black;" >
-      
-                {% if user.is_authenticated %}
-                <img src="{{user.profile.profile_photo.url}}" alt="" style="border-radius: 50%; width: 20%; height: auto;"> &nbsp; <span class="text-white">{{user.username|title}}</span>
-                {%else%}
-                <img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
-                    class="card-img-top" alt="My profile picture" style="border-radius: 50%; width: 50%; height: auto;">
-                {% endif %} </a>
-          </li>
+        
+      <div class="forms col-md-4 navbar-center auth ">
         
          
-      
-       
-    </ul>
+    
+        <form style="color:black; margin-left: 30%;font-size: 30px;"class="me-auto search-form " target="_self" action="{% url 'search_business' %}">
+            <div class="input-group text-dark">
+    
+                <input style="font-size:15px "type="text" class="form-control" placeholder="Search Business"
+                    name="search_term">
+            </div>
+        </form>
+      </div>
+      <a class="nav-link text-dark prof" href="/profile" >
+
+          {% if user.is_authenticated %}
+          <img src="{{user.profile.profile_photo.url}}" alt="" style="border-radius: 50%; width: 30%; height: auto%;"> &nbsp; <span class="text-white">{{user.username|title}}</span>
+          {%else%}
+          <img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
+              class="card-img-top" alt="My profile picture" style="border-radius: 50%; width: 50%; height: auto;">
+          {% endif %} </a>
     </div>
+  <style>
+    .prof{
+      
+      margin-left:30%;
+    }
+ 
+  </style>
   </nav>
