--- a/app/templates/single_hood.html
+++ b/app/templates/single_hood.html
@@ -27,8 +27,82 @@
           </div>
         
     </div>
+    {% for business in businesses %}
+            <div class="col-md-4 text-dark">
+                <div class="card" >
+                    <div class="card-body">
+                        <h5 class="card-title text-capitalize">{{ business.name }}</h5>
+                        <p>{{ business.description }}</p>
+                        <p>{{ business.neighborhood }}</p>
+                        <p>{{ business.location }}</p>
+                        <a href="malto:{{ business.email }}" class="card-link">Email: <span class="text-bold text-primary">{{ business.email }}</span> </a>
+                       <br>
+                    </div>
+                  </div>
+            </div>
+
+            {% empty %}
+            <div class="col-md-12">
+                <div class="card mb-4 post-card">
+                    <div class="card-body text-center">
+                        <h6 class="fade-item mb-2 text-danger">No businesses found within your Neighborhood!!</h6>
+                    </div>
+                </div>
+            {% endfor %}
+            {% for post in posts %}
+            
+
+            <div class="col-md-4">
+                <img src="{{ post.photo.url }}" alt="" style="border-radius: 50%; width: 50%; height: auto;">
+
+                <div class="card mb-4 post-card">
+                    
+                    <div class="card-body">
+                        
+                            <h6 class="">{{ post.title }}</h6>
+                            <p class="">{{ post.content }}</p>
+                            <div >
+                                <div>
+                                    <p class="text-uppercase badge rounded-pill text-dark text-capitalize">{{ post.location }}</p>
+                                </div>
+                                <div>
+                                    <p>{{ post.created_on|date }}</p>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="">
+                                   
+                                    <div>
+                                        <p class="author mt-2 text-capitalize">
+                                            <strong>By <strong>
+                                                </strong>{{ post.user }}</strong>
+                                        </p>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        
+                    </div>
+                </div>
+            </div>
+
+            
+            {% empty %}
+            <div class="col-md-12">
+                <div class="card mb-4 post-card">
+                    <div class="card-body text-center">
+                        <h4 class="text-danger">No Posts within Your Area!!!</h4>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+
+
+
+
    
 </div>
+
 
 
 {% endblock %}
