--- a/app/templates/create_hood.html
+++ b/app/templates/create_hood.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 <div class="box">
-    <div class="text-center">
+    <div class="text-center" style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/HoodWatch/master/static/images/bg.jpg'); font-family: 'Cookie', cursive;font-size: 15px; ">>
     <div class="title">Kindly create a Neighbourhood</div>
     <hr>
-    <div class="guide">Please provide an image for your profile picture, a short description of yourself and/or what you do (bio), your location, email address and a link to your portfolio.</div>
+    <div class="guide">Please create Your Hood.</div>
     </div>
     <form action="{%url 'create_hood'%}" method="post" enctype="multipart/form-data">
         {%csrf_token%}    
