styling of the jbusiness_form.html

--- a/app/templates/business_form.html
+++ b/app/templates/business_form.html
@@ -9,19 +9,17 @@
 {% block content %}
 <style>
     body{
-    font-family: 'Lato', global_font_string;
+    
     font-weight: 500;
     background-color: #595d64;
-    color: whitesmoke;
-    }
-    
+    }    
 </style>
 <br><br>
-<div class="container">
+<div class="container text-center">
     <div class="box">
         <div class="text-center">
         <div class="title">
-            <h3>Create Business</h3>
+            <h3 class="head ">Create Business</h3>
         </div>
         <hr>
         </div>
