--- a/app/templates/update_profile.html
+++ b/app/templates/update_profile.html
@@ -1,17 +1,25 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %} 
 {% block content %}
-<br><br><br><br>
 <!-- content -->
-<div class="container-fluid"style="background-image:url('https://images.unsplash.com/photo-1641146556040-d470e33f98bd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw4NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60');background-size: cover; font-family: 'Cookie', cursive;font-size: 2.0em;">
+<style>
+  body{
+  
+  font-weight: 500;
+  background-color: #595d64;
+ }  
+</style>
+<br>
+<div class="container text-light" style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/HoodWatch/master/static/images/bg.jpg');background-size: cover; font-family: 'Cookie', cursive;font-size: 20px; ">
   <div class="col-md-6"style="margin-left:25%">
-    <h3 class="text-center"><u>Update Profile</u></h3>
+    <h3 class="text-center"><u style="font-style: italic; color: black">Update Profile</u></h3>
     <form action="" method="POST" enctype="multipart/form-data">
       {% csrf_token %} 
       {% bootstrap_form form %}
       <div class="form-group">
-        <input type="submit" class="btn btn-warning btn-sm" value="Update" />
+        <input type="submit" class="btn btn-light btn-sm " value="Update" />
       </div>
+      <br>
     </form>
   </div>
 </div>
