--- a/app/templates/registration/base.html
+++ b/app/templates/registration/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Awards Application - Account </title>
+    <title>Hoods254 - Account </title>
     <!-- favico -->
     <link rel="shortcut icon" href="https://img.icons8.com/flat-round/64/000000/medal--v1.png"/>
 
