styling of the login.html

--- a/app/templates/django_registration/registration_form.html
+++ b/app/templates/django_registration/registration_form.html
@@ -1,7 +1,8 @@
 {%extends "registration/base.html"%} 
 {% load bootstrap4 %}
 {% block content %}
-<div class="container-fluid" style="background-image:url('https://raw.githubusercontent.com/Owiti-Charles/HoodWatch/master/static/images/bg.jpg'">
+<body style="background-image: url('https://raw.githubusercontent.com/Owiti-Charles/HoodWatch/master/static/images/bg.jpg'); background-repeat: no-repeat; background-size: cover">
+<div class="container-fluid" style="background-image: url('');">
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4"></div>
@@ -32,4 +33,6 @@
 </div>
 
 {% endblock %}
+
+</body>
 
