--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,6 +1,7 @@
 {%extends "registration/base.html"%}
 {% load bootstrap4 %}
 {% block content %}
+<body style="background-image: url('https://raw.githubusercontent.com/Owiti-Charles/HoodWatch/master/static/images/bg.jpg'); background-repeat: no-repeat; background-size: cover">
 <div class="container-fluid" style="font-style:'Libre Bodoni', sans-serif;background-color:'grey'; background-image:url('https://raw.githubusercontent.com/Owiti-Charles/HoodWatch/master/static/images/bg.jpg'">
     <div class="row">
         <!-- Empty div -->
@@ -32,3 +33,4 @@
 </div>
 
 {% endblock %}
+</body>
