--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,16 +6,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="{% url 'hood' %}">Hoods <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-dark" href="{% url 'hood' %}">Hoods <span 
+            class="sr-only">(current)</span></a>
         </li>
         {% if user.is_authenticated %}
         <li class="nav-item active">
           <a class="nav-link text-dark " href="/admin">Admin</a>
         </li>
         {%else%}
-        <li class="nav-item active">
-          <a class="nav-link " href="{% url 'hood' %}">Neighbourhoods </a>
-        </li>
+       
         {%endif%}
        
         {% if user.profile.neighbourhood %}
@@ -49,7 +48,7 @@
           
           {% endif %} </a>
         
-            <a class="nav-item text-dark" href="/logout/">logout</a>
+            <a class="nav-item text-dark" href="/logout/">Logout</a>
         
   </div>
 
