--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -26,7 +26,7 @@
                     {% if profile.profile_photo %}
                     <img style="border-radius: 50%" src="{{profile.profile_photo.url}}" alt="" class="card-img-top">
                     {%else%}
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3aV6aq2LNho3SY8cDICGVEdRweW5u9IaZ_w&usqp=CAU"
+                    <img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
                         class="card-img-top" alt="My profile picture">
                     {% endif %}
                     <div class="card-body text-center">
