--- a/app/templates/post_form.html
+++ b/app/templates/post_form.html
@@ -7,11 +7,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="box">
+<div class="container box">
     <div class="text-center">
     <div class="title">You can create a Post Here</div>
     <hr>
-    <div class="guide">Please provide an image for your profile picture, a short description of yourself and/or what you do (bio), your location, email address.</div>
     </div>
     <form action="{%url 'create_post'%}" method="post" enctype="multipart/form-data">
         {%csrf_token%}    
