Modyfiying the create post form

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -46,9 +46,8 @@
               class="card-img-top" alt="My profile picture" style="border-radius: 50%; width: 50%; height: auto;">
               
           
-          {% endif %} </a>
-        
-            <a class="nav-item text-dark" href="/logout/">Logout</a>
+          {% endif %} 
+        <a class="nav-item text-dark" href="/logout/">Logout</a>
         
   </div>
 
